# rust202311

./: .gitignore  Readme.md
01-first_steps/: Readme.md
03-euclide/src/: main.rs
03-euclide_panic/: Cargo.toml
04-textdemo/: Cargo.toml
04-textdemo/src/: main.rs
05-euclide_error/src/: main.rs
06-struct-enum/: Cargo.toml
06-struct-enum/src/: city.rs  demo_collections.rs  main.rs  sign.rs  test_equals.rs  test_order.rs  trafficlight.rs
07-democlosure/: Cargo.toml
07-democlosure/src/: main.rs
08-citylib/: Cargo.toml
08-citylib/src/: city.rs  lib.rs  tests.rs
08-citylib/src/tests/: test_add_assign.rs  test_compute_something.rs  test_equals.rs
09-appcity_with_lib/: Cargo.toml
09-appcity_with_lib/src/: main.rs
10-geometry/: Cargo.toml
10-geometry/src/: geo.rs  macros.rs  main.rs  tests.rs
10-geometry/src/geo/: generic.rs  model.rs  traits.rs
10-geometry/src/tests/: test_model.rs
11-multithread/: Cargo.toml
11-multithread/src/: main.rs
12-bonus-async/: Cargo.toml
12-bonus-async/src/: main.rs
controlflow/: Readme.md
controlflow/src/: main.rs
first_steps/: Readme.md  basics.rs
