[package]
name = "citylib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
author = ["Matthias and co."]
repository = "https://github.com/matthcol/citylib"
description = """"
A super lib about cities
"""
keywords = ["city", "speed"]

[dependencies]
